got rid of absolute path to image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <p><b>Under Construction: Future home of The Argyle Fist</b></p>
     <p><br>
     </p>
-    <img src="file:///C:/Users/amerigo/Documents/GitHub/argyleFist.github.io/images/bb2.jpg"
-      alt="" title="bombilla blanca" style="width: 991px; height: 630px;"><br>
+    <img src="images/bb2.jpg" alt="" title="bombilla blanca" style="width: 991px; height: 630px;"><br>
   </body>
 </html>
