--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
   </head>
   <body>
-    <p><b>Under Construction: Future home of The Argyle Fist</b></p>
+    <p><b>Under Construction: Future home of The Argyle Fist!</b></p>
     <p><br>
     </p>
     <img src="images/bb2.jpg" alt="" title="bombilla blanca" style="width: 991px; height: 630px;"><br>
